--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -36,6 +36,7 @@
     font-weight : bold;
     padding-left : 20px;
     margin : 0;
+    margin-bottom: 0;
     text-decoration : underline;
   }
 
