--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,32 +1,9 @@
-<!DOCTYPE html>
-<html>
-
-
-<head>
-  <meta charset="UTF-8">
-  <title>Mi página web</title>
-
-  <!-- Bootstrap CSS-->
-  <!-- <link href="dist/bootstrap/css/bootstrap.min.css" rel="stylesheet"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"  crossorigin="anonymous">
-  <!-- Bootstrap JS-->
-  <!-- <script src="dist/bootstrap/js/bootstrap.bundle.min.js"></script> -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" 
-integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin= "anonymous"></script>
-
-<link rel="stylesheet" type="text/css" href="estilos.css">
-
-</head>
-
-<body>
-
 <!--Navigation bar-->
 <div class="container-fluid">
   <nav class="navbar navbar-dark">
     <!-- Brand -->
     <a class="navbar-brand" href="#">
-    <img src="APLogo-20-20.png" alt="Logo" style= "width: 150px ; padding : 0px;"></a>
+    <img src="assets/APLogo-20-20.png" alt="Logo" style= "width: 150px ; padding : 0px;"></a>
   
     <!-- Toggler Button -->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
@@ -54,7 +31,7 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
 <div class="container-fluid">
 <div class="header" >
     <img src="https://raw.githubusercontent.com/abrilroussy/proyecto-FrontEnd/main/Header2.png" 
-    class ="img-fluid rounded" alt="header" height="290"; width="1350";> 
+    class ="img-fluid rounded" alt="header" height="290" width="1350"> 
   <div class="icon rounded-circle" >
     <img src="https://raw.githubusercontent.com/abrilroussy/proyecto-FrontEnd/main/kdhs.jpg" class= "rounded-circle img-fluid" 
     alt="icon" height="130" width="130">
@@ -81,7 +58,7 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
       <br>
       <p>Tengo 22 años, vivo en Capital Federal y me interesa introducirme en el mercado laboral del mundo de la programación full stack,
         soy una persona muy organizada y metódica, tengo un título en Dirección de Sonido y actualmente también estoy cursando la carrera de Letras de la UBA.
-        </p>
+      
       </p>
       <br> </div>
       </div>
@@ -348,6 +325,5 @@ integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0
     </div>
   </div>
 
-</body>
-</html>
+
 
