--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,36 +4,20 @@
     <!-- Brand -->
     <a class="navbar-brand" href="#">
     <img src="assets/APLogo-20-20.png" alt="Logo" style= "width: 150px ; padding : 0px;"></a>
-  
-    <!-- Toggler Button -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <!-- Navbar links -->
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-      </ul>
-    </div>
-  </nav> 
+      
+    <form class="form-inline">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
+    </form>
+  </nav>
 </div>
 
 <!-- Banner header and icon --> 
 <div class="container-fluid">
 <div class="header" >
-    <img src="https://raw.githubusercontent.com/abrilroussy/proyecto-FrontEnd/main/Header2.png" 
+    <img src="assets/Header2.png" 
     class ="img-fluid rounded" alt="header" height="290" width="1350"> 
   <div class="icon rounded-circle" >
-    <img src="https://raw.githubusercontent.com/abrilroussy/proyecto-FrontEnd/main/kdhs.jpg" class= "rounded-circle img-fluid" 
+    <img src="assets/kdhs.jpg" class= "rounded-circle img-fluid" 
     alt="icon" height="130" width="130">
   </div>
 </div>
