--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,12 +4,35 @@
     <!-- Brand -->
     <a class="navbar-brand" href="#">
     <img src="assets/APLogo-20-20.png" alt="Logo" style= "width: 150px ; padding : 0px;"></a>
-      
-    <form class="form-inline">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Login</button>
-    </form>
+
+    <!-- LOGIN -->  
+   <div class="login-btn">
+    <button type="button" class="btn btn-outline-light my-2 my-sm-0" data-bs-toggle="modal" data-bs-target="#exampleModal">Login</button>
+   </div> 
   </nav>
 </div>
+
+
+<!--Popup login-->
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content ">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body ">
+        <div class="input-field"><input placeholder="Usuario" class="validate"></div>
+        <div class="input-field"><input placeholder="Contraseña" class="validate"></div>
+        <button type="button" class="second-button">Login</button>
+      </div>
+     </div>
+    </div>
+  </div>
+
+
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 
 <!-- Banner header and icon --> 
 <div class="container-fluid">
@@ -311,3 +334,33 @@
 
 
 
+
+<!--
+
+      <div class="container">
+        <h2>Basic Modal Example</h2>
+        
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+          Launch demo modal
+        </button>
+  
+        
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <div class="input-field"><input placeholder="Usuario" class="validate"></div>
+                <div class="input-field"><input placeholder="Contraseña" class="validate"></div>
+                <button type="button" class="second-button">Login</button>
+              </div>
+              
+            </div>
+          </div>
+        </div>
+      </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
+    -->
