--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -89,7 +89,7 @@
     <div class="col-sm-8">
     <div class= "rounded cajita">
     <br>
-    <p>BACHILLER EN MÚSICA</p>
+    <h4>BACHILLER EN MÚSICA</h4>
     <p>Especialización en composición musical
       <br>
       Bachillerato de Bellas Artes Universidad Nacional de La Plata “Prof. Francisco A. de Santo”
@@ -110,7 +110,7 @@
     <div class="col-sm-8">
     <div class= "rounded cajita">
     <br>
-    <p>TERCIARIO EN DIRECCIÓN DE SONIDO</p>
+    <h4>TERCIARIO EN DIRECCIÓN DE SONIDO</h4>
     <p>Escuela Nacional de Experimentación y Realización Cinematográfica (ENERC) 
       </p>
     <br> </div>
@@ -129,7 +129,7 @@
     <div class="col-sm-8">
     <div class= "rounded cajita">
     <br>
-    <p>CERTIFICACION B2 FIRST</p>
+    <h4>CERTIFICACION B2 FIRST</h4>
     <p>Aprobado con grade A
       <br>
       Cambridge Asessment English       
@@ -150,10 +150,10 @@
     <div class="col-sm-8">
     <div class= "rounded cajita">
     <br>
-    <p>CERTIFICACION ARGENTINA PROGRAMA #SEPROGRAMAR</p>
-    <p>CERTIFICACION ARGENTINA PROGRAMA #YOPROGRAMO
+    <h4>CERTIFICACION ARGENTINA PROGRAMA #SEPROGRAMAR</h4>
+    <h4>CERTIFICACION ARGENTINA PROGRAMA #YOPROGRAMO </h4>
       <br>
-      Programador web Full Stack Junior</p>
+      <p>Programador web Full Stack Junior</p>
     <br> </div>
     </div>
   </div>
@@ -263,7 +263,7 @@
       <div class="col-sm-8">
       <div class= "rounded cajita">
       <br>
-      <p>CLASES PARTICULARES DE INGLÉS</p>
+      <h4>CLASES PARTICULARES DE INGLÉS</h4>
       <p>Grammar, Speaking, Reading </p>
       <br> </div>
       </div>
@@ -281,7 +281,7 @@
       <div class="col-sm-8">
       <div class= "rounded cajita">
       <br>
-      <p>MANEJO DE REDES SOCIALES DEL CLUB POA</p>
+      <h4>MANEJO DE REDES SOCIALES DEL CLUB POA</h4>
       <p>Edición de videos, creación de flyers y diseño.
         </p>
       <br> </div>
@@ -300,7 +300,7 @@
       <div class="col-sm-8">
       <div class= "rounded cajita">
       <br>
-      <p>MOZA/VENDEDORA EN COPANI PURO CHOCOLATE</p>
+      <h4>MOZA/VENDEDORA EN COPANI PURO CHOCOLATE</h4>
       <p>Encargada de la caja, organización y venta del local y también de preparar/servir café y postres.    
         </p>
       <br> </div>
@@ -325,7 +325,7 @@
       <div class="col-sm-8">
       <div class= "rounded cajita">
       <br>
-      <p>CREACIÓN DE PORTAFOLIO WEB</p>
+      <h4>CREACIÓN DE PORTAFOLIO WEB</h4>
       <p>Trabajo Final de Argentina Programa</p>
       <br> </div>
       </div>
