--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-center">
 <div class="content">
     <div class="header">
-      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      <h4>Login</h4>
     </div>
     <div class="body">
       <div class="input-field"><input placeholder="Usuario" class="validate"></div>
