--- a/src/app/aboutme/aboutme.component.html
+++ b/src/app/aboutme/aboutme.component.html
@@ -4,9 +4,9 @@
       <div class="col-sm-3" >
         <div class= "rounded cajita"> 
         <br>
-        <p id="nombre"> {{persona.nombre}} {{persona.apellido}}
+        <p id="nombre"> {{person.nombre}} {{person.apellido}}
           <br>
-        Full Stack Developer Junior</p>
+        {{person.titulo}}</p>
         <br> 
       <br>
     </div>
@@ -14,8 +14,7 @@
       <div class="col-sm-9">
       <div class= "rounded cajita">
       <br> 
-      <p>Tengo 22 años, vivo en Capital Federal y me interesa introducirme en el mercado laboral del mundo de la programación full stack,
-        soy una persona muy organizada y metódica, tengo un título en Dirección de Sonido y actualmente también estoy cursando la carrera de Letras de la UBA.
+      <p>{{person.descripcion}}
       
       </p>
       <br> </div>
