--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,1 @@
-<app-encabezado></app-encabezado>
-
-<app-aboutme></app-aboutme>
-
-<app-educacion></app-educacion>
-
-<app-habilidades></app-habilidades>
-
-<app-experienciayproyectos></app-experienciayproyectos>
+<router-outlet></router-outlet>
