--- a/src/app/educacion/educacion.component.html
+++ b/src/app/educacion/educacion.component.html
@@ -1,4 +1,37 @@
-  <!--Educacion-->
+<div class="row">
+  <div class="col-sm-10">
+  <h3>Estudios</h3>
+  </div>
+  <div class="col-sm-2">
+  <button type="button" class="btn btn-outline-light my-2 my-sm-0 btnNuevaExp" routerLink="/nuevaEdu"
+    *ngIf="isLogged">Nuevos Estudios</button>
+  </div>
+
+  <div class="col-sm-1"></div>
+  <div class="col-sm-11">
+    <div class="container-fluid container-arriba">
+      <table class="table">
+        <tbody>
+          <tr *ngFor="let Educacion of edu">
+            <td><h4>{{Educacion.aniosEdu}}</h4></td>
+            <td><h4>{{Educacion.nombreEdu}}</h4></td>
+            <td><p>{{Educacion.descripcionEdu}}</p></td>
+            <td *ngIf="isLogged">
+              <button class="btn botonesEdicion btn-light" routerLink="/editEdu/{{Educacion.id}}"><i
+                  class=" dibujo bi bi-pencil"></i></button>
+            </td>
+            <td *ngIf="isLogged">
+              <button class="botonesEdicion btn btn-light" (click)="delete(Educacion.id)">
+                <i class="dibujo bi bi-trash3"></i></button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+  
+  
+  <!--Educacion
   
   <div>
     <h3>Estudios</h3>
@@ -84,4 +117,4 @@
         </div>
       </div>
     </div>
-  
+  -->
