--- a/src/app/experienciayproyectos/experienciayproyectos.component.html
+++ b/src/app/experienciayproyectos/experienciayproyectos.component.html
@@ -1,7 +1,35 @@
- <div>
-    <h3>Experiencia laboral</h3>
+<div class="row">
+  <div class="col-sm-10">
+  <h3>Experiencia laboral</h3>
   </div>
-    
+  <div class="col-sm-2">
+  <button type="button" class="btn btn-outline-light my-2 my-sm-0 btnNuevaExp" routerLink="/nuevaExp"
+    *ngIf="isLogged">Nueva Experiencia</button>
+  </div>
+
+  <div class="col-sm-1"></div>
+  <div class="col-sm-11">
+    <div class="container-fluid container-arriba">
+      <table class="table">
+        <tbody>
+          <tr *ngFor="let Experiencia of exp">
+            <td><h4>{{Experiencia.aniosE}}</h4></td>
+            <td><h4>{{Experiencia.nombreE}}</h4></td>
+            <td><p>{{Experiencia.descripcionE}}</p></td>
+            <td *ngIf="isLogged">
+              <button class="btn botonesEdicion btn-light" routerLink="/editExp/{{Experiencia.id}}"><i
+                  class=" dibujo bi bi-pencil"></i></button>
+            </td>
+            <td *ngIf="isLogged">
+              <button class="botonesEdicion btn btn-light" (click)="delete(Experiencia.id)">
+                <i class="dibujo bi bi-trash3"></i></button></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
+<!---
     <div class="container-fluid container-arriba">
       <div class="row">
         <div class="col-sm-2" >
@@ -98,3 +126,4 @@
       </div>
     </div>
     
+  -->
