--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,10 +3,18 @@
     <div class="header">
       <h4>Login</h4>
     </div>
+    <div>
+    <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
     <div class="body">
-      <div class="input-field"><input placeholder="Usuario" class="validate"></div>
-      <div class="input-field"><input placeholder="Contraseña" class="validate"></div>
-      <button type="button" class="second-button">Login</button>
+      <input class="input-field validate" type="email" id="nombreUsuario" name="nombreUsuario" [(ngModel)]="nombreUsuario" required placeholder="Usuario" for="nombreUsuario">
+      
+      <input type="password" id="password" name="password" class="input-field validate"[(ngModel)]="password" required placeholder="Contraseña" for="password">
+      
+      <button type="submit" class="second-button">Login</button>
+    
     </div>
+  </form>
+  <button type="button" class="second-button">Crear Cuenta</button>
+
 </div>
 </div>
